--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.0.1",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "pg": "^8.16.3"
   }
 }
